https://github.com/mani-sankar17/Blog-website.git

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "homepage": "https://mani-sankar17.github.io/blog-website",
   "name": "blog-app",
   "version": "0.1.0",
+  "homepage": "https://mani-sankar17.github.io/Blog-website",
   "private": true,
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -11,8 +12,8 @@
     "react-scripts": "5.0.1"
   },
   "scripts": {
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
